2008-01-31  William Holmes  <billholmes54@gmail.com>

	* process.c (process_module_string_read): Check the size returned form
	  VerQueryValue to avoid out of memory exception.

2008-01-28  Jonathan Chambers  <joncham@gmail.com>

	* marshal.c: Add support for BSTR marshalling
	using other COM systems.

	Code is contributed under MIT/X11 license.

2008-01-28 Rodrigo Kumpera  <rkumpera@novell.com>

	* object.c (mono_runtime_invoke_array): reverted previous
	commit as it breaks the build.

2008-01-28 Rodrigo Kumpera  <rkumpera@novell.com>

	* object.c (mono_runtime_invoke_array): Verify arguments for
	invalid types. Fixes #348522.

2008-01-28 Rodrigo Kumpera  <rkumpera@novell.com>

	* verify.c: added IL_CODE_CALL_NONFINAL_VIRTUAL to track calls to
	non-final virtual calls using call. 

	* verify.c (do_invoke): fixed some TODOs.

	* verify.c (push_arg): set has_this_store for "ldarga 0".

2008-01-27  Zoltan Varga  <vargaz@gmail.com>

	* reflection.c (reflection_methodbuilder_to_mono_method): Allow DynamicMethods
	which belong to an inflated class. Fixes #356531.

2008-01-26  Robert Jordan  <robertj@gmx.net>

	* file-io.c: Implement and use wrappers for GetFileAttribute|Ex ()
	which resort to FindFirstFile when a certain error condition
	(ERROR_SHARING_VIOLATION) occured. Fixes bug #325212.
	Code is contributed under MIT/X11 license.

2008-01-24  Jonathan Chambers  <joncham@gmail.com>

	* marshal.c (emit_marshal_string): Fix out string marshalling
	to use specified encoding. Fixes #323900.

	Code is contributed under MIT/X11 license.

2008-01-24  Raja R Harinath  <harinath@hurrynot.org>

	* class.c (mono_class_inflate_generic_method_full): Don't modify
	iresult->context after cache check.

2008-01-23  Zoltan Varga  <vargaz@gmail.com>

	* class.c (mono_class_inflate_generic_method_full): Change the
	struct assignments to memcpy for better visibility and add some comments.

2008-01-23  Dick Porter  <dick@ximian.com>
